force-app/main/default/objects/Contact_Person__c/Contact_Person__c.object-meta.xml
<CustomObject>
    <label>Contact Person</label>
    <nameField>
        <label>Contact Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Persons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>