force-app/main/default/objects/Contact_Person__c/fields/Contact_Person_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Type__c</fullName>
    <label>Contact Person Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>