force-app/main/default/objects/Contact_Person__c/fields/Patient_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient Name</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Contact Persons</relationshipLabel>
    <relationshipName>Contact_Persons</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>